<resources>
    <string name="app_name">BloomBerg</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome_app">Media Rumo</string>
    <!--IMG descricao do conteudo-->
    <string name="img_noticia">Imagem Noticia</string>
    <string name="img_procurar">Imagem Icone Procura</string>
    <string name="img_pontinho">Imagem Icone Ponto</string>
    <string name="img_favoritos">Imagem Icone Favoritos</string>
    <string name="img_partilha">Imagem Icone Partilhar</string>
    <string name="img_mais_info">Imagem Icone Mais informação</string>
    <string name="img_voltar_ic">Imagem Icone Voltar</string>
    <string name="img_reproduzir_ic">Imagem Icone Reproduzir</string>
    <string name="img_cir_vermelho_ic">Imagem Icone Circulo Vermelho</string>
    <string name="facebook_app_id">2335117853474777</string>
    <string name="fb_login_protocol_scheme">fb2335117853474777</string>
    <!--TXTS Textos-->
    <string name="txt_categoria_destaque">Destaques</string>
    <string name="txt_categoria_atualidade">Actualidade</string>
    <string name="txt_categoria_manchete">Manchetes</string>
    <string name="txt_categoria_tecnologia">Tecnologia</string>
    <string name="txt_categoria_cultura">Cultura</string>
    <string name="txt_business">BUSINESS</string>
    <string name="txt_bolsa">Bolsa</string>
    <string name="txt_noticias_guardadas">Notícias Guardadas</string>
    <string name="txt_categoria_internacional">Internacional</string>
    <string name="txt_categoria_politica">Politica</string>
    <string name="txt_categoria_para_si">Para Sí</string>
    <string name="txt_categoria_sociedade">Sociedade</string>
    <string name="txt_categoria_opniao">Opinião</string>
    <string name="txt_separador">Separador</string>
    <string name="txt_noticia_1">IMF Warnz Zimbabwe Contra Play Boost como Viver Standards Bater</string>
    <string name="txt_noticia_2">Novo curremcy tem erodido poder de gastos dos trabalhadores do governo</string>
    <string name="txt_noticia_3">Ferro e fosfato angolanos serão promovidos em roadshows internacionais</string>
    <string name="txt_noticia_4">A África do Sul facilitou o controle sobre empréstimos não garantidos em 2007 para
        aumentar a inclusão financeira em um dos países mais desiguais do mundo. Diante de críticas crescentes, a
        indústria lutou para melhorar sua reputação, mesmo com a regulamentação melhorando. Em vez de ajudar os mais
        necessitados, a prática liderou um boom de dívidas impulsionado pelo consumo dos menos capazes de pagar
        empréstimos, de acordo com o Capital Diferencial.
    </string>
    <string name="txt_data_pub">Data</string>
    <string name="txt_a_seguir">A seguir</string>
    <string name="txt_manchetes">Manchetes</string>
    <string name="txt_tendencias">Tendências</string>
    <string name="txt_sequencia">1</string>
    <string name="txt_fonte">Fonte - Jornal Mercado</string>
    <string name="txt_media">Media</string>
    <string name="txt_fonte_hint">Fonte -</string>
    <string name="txt_ver_tudo">VER TUDO</string>
    <string name="txt_ver_tudo_assistir">VER MAIS</string>
    <string name="txt_ao_vivo">VIVO</string>
    <string name="txt_televisao_mr">MEDIA RUMO TV</string>
    <string name="txt_canal_media_rumo">Media Rumo Mercado: África</string>
    <string name="txt_radio_media_rumo">Media Rumo Rádio</string>
    <string name="txt_ver_video_audio">VER TODOS VIDEOS E AUDIOS</string>
    <string name="txt_ver_renda_fixa">VER TODAS RENDAS FIXAS</string>
    <string name="txt_valor_bolsa">S&amp;P 500</string>
    <string name="txt_valor_bolsa_">2,847.60</string>
    <string name="txt_valor_bolsa_porcento">+0.25%</string>
    <string name="txt_valor_duracao_video">7:09</string>
    <string name="txt_cancelar">CANCELAR</string>
    <string name="txt_entrar_criar_conta">Entre ou crie uma Conta</string>
    <string name="txt_entrar_desfrutar">Entre ou crie uma conta para acessar todas as melhores mídias que a Rumo tem
        a oferecer
    </string>
    <string name="txt_criar_conta">Criar uma Conta</string>
    <string name="txt_mais_formas">
        Mais maneiras de fazer login
    </string>
    <string name="txt_entrar_email">CONTINUE COM EMAIL</string>
    <string name="txt_entrar_">Entrar</string>
    <string name="txt_hint_pesquisa">Pesquisar por notícias, segurança e midia</string>
    <string name="explorar_topicos">Explorar tópicos</string>
    <string name="txt_fscebook">Facebook</string>
    <string name="txt_google">Google</string>
    <string name="txt_nome">Nome</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_senha">Senha</string>
    <string name="txt_pol_1">Ao te registares estás a concordar com os</string>
    <string name="txt_pol_2">Termos de utilização</string>
    <string name="txt_pol_3">e</string>
    <string name="txt_pol_4">Politica de privacidade</string>
    <string name="txt_rep_senha">Repita a senha</string>
    <string name="txt_usuario">E-mail</string>
    <string name="txt_mostrar_senha">Mostrar Senha</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_mercado_financeiro">Mercados Financeiros</string>
    <string name="menu_mercado">Mercado</string>
    <string name="menu_nossos_meios">Nossos Meios</string>
    <string name="menu_nossos_meios_online">Nossos Meios Online</string>
    <string name="menu_media_redes_sociais">Redes Sociais</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_media">Media</string>
    <string name="menu_menu">Menu</string>
    <string name="live_tv">Live Tv</string>
    <string name="txt_meu_perfil">Meu Perfil</string>


    <!--MENU VALORES-->

    <!--HOME-->
    <string name="txt_atualidade">Actualidade</string>
    <string name="txt_destaque">Destaques</string>
    <string name="txt_merc_financeiros">Mercados financeiros</string>
    <string name="txt_para_Si">Para si</string>
    <string name="txt_internacional">Internacional</string>
    <string name="txt_politica">Política</string>
    <string name="txt_sociedade">Sociedade</string>
    <string name="txt_opniao">Opinião</string>
    <string name="txt_media_">Media</string>


    <!--Mercados Financeiros-->
    <string name="txt_Índices">Índices</string>
    <string name="txt_titulo_tesouro">Títulos do tesouro</string>
    <string name="txt_acoes">Ações</string>
    <string name="txt_cambios">Câmbios</string>

    <!--Nossos meios-->
    <string name="txt_nossos_meios_mercado">Mercado</string>
    <string name="txt_nossos_meios_vanguarda">Vanguarda</string>
    <string name="txt_nossos_meios_rumo">Rumo</string>
    <string name="txt_nossos_meios_media_rumo">Media Rumo</string>
    <string name="txt_nossos_meios_goldenGeneration">Golden Generation</string>

    <!--MEDIA-->
    <string name="txt_media_directo">Directo</string>
    <string name="txt_media_videos">Vídeos</string>
    <string name="txt_media_audios">Áudios</string>
    <string name="txt_media_streaming">Streaming</string>

    <string name="txt_redes_sociais_quiz">Quizz</string>
    <string name="txt_redes_quiosque">Quiosque</string>
    <string name="txt_subscricao">Subscrição</string>
    <string name="txt_subscricao_sorteio">Sorteio Media Rumo</string>

    <string name="txt_perfil_">Sobre Nós</string>

    <!--PERFIL-->
    <string name="txt_perfil_usuario">Usuário</string>
    <string name="txt_hint_nome">Nome</string>
    <string name="txt_hint_senha">Senha</string>
    <string name="txt_hint_email">E-Mail</string>
    <string name="txt_hint_repita_senha">Repita a senha</string>


    <string name="txt_perfil_email">E-mail</string>
    <string name="txt_perfil_cidade">Cidade</string>
    <string name="txt_perfil_municipio">Municipio</string>
    <string name="txt_perfil_telefone">Telefone</string>
    <string name="txt_perfil_rua">Rua</string>
    <string name="txt_perfil_genero">Gênero</string>
    <string name="txt_perfil_aniversario">Aniversário</string>


</resources>
