<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/menu_inicio"
        android:icon="@drawable/ic_home_black_24dp" />

    <item
        android:id="@+id/mercadoFragment"
        android:title="@string/menu_mercado"
        android:icon="@drawable/ic_graphic_eq_black_24dp" />

    <item
        android:id="@+id/nossosMeiosFragment"
        android:title="@string/menu_nossos_meios"
        android:icon="@drawable/ic_watchlist_black_24dp" />

    <item
        android:id="@+id/audioFragment"
        android:title="@string/menu_media"
        android:icon="@drawable/ic_live_tv_black_24dp"/>

    <item
        android:id="@+id/menuFragment"
        android:title="@string/menu_menu"
        android:icon="@drawable/ic_menu_black_24dp" />

</menu>