<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:background="@android:color/black"
                                             android:layout_marginBottom="@dimen/tamanho_16">

    <ImageView
            android:layout_width="@dimen/tamanho_150"
            android:layout_height="@dimen/tamanho_90" app:srcCompat="@drawable/noticia_img"
            android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" style="@style/img_noticia_item_video"
            android:contentDescription="@string/img_noticia"/>
    <TextView
            android:text="@string/txt_noticia_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            app:layout_constraintStart_toEndOf="@+id/imageView2" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.0" android:textAlignment="viewStart"
            app:layout_constraintTop_toTopOf="@+id/imageView2" style="@style/txt_noticia_titulo_sub_branca"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline6"
                                          android:orientation="vertical" app:layout_constraintGuide_end="20dp"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:srcCompat="@drawable/separador_pontos_branco"
            android:id="@+id/imageView14"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toEndOf="@+id/imageView2" android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            android:contentDescription="@string/txt_separador"/>
    <android.support.constraint.Barrier android:layout_width="wrap_content" android:layout_height="wrap_content"
                                        android:id="@+id/barrier" app:barrierDirection="bottom"
                                        app:constraint_referenced_ids="textView7" tools:layout_editor_absoluteY="90dp"/>
    <ImageView
            android:layout_height="@dimen/tamanho_20" app:srcCompat="@drawable/ic_favorite_para_fundo_preto"
            android:id="@+id/imageView15"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintBottom_toTopOf="@+id/imageView14"
            app:layout_constraintTop_toTopOf="@+id/barrier" app:layout_constraintVertical_bias="1.0"
            style="@style/icone_estilo_partilha_favorito" android:layout_width="@dimen/tamanho_16"
            android:contentDescription="@string/img_favoritos" android:layout_marginBottom="8dp"/>
    <ImageView
            android:layout_width="@dimen/tamanho_16"
            android:layout_height="@dimen/tamanho_20" app:srcCompat="@drawable/ic_partilha_fundo_preto"
            android:id="@+id/imageView16"
            app:layout_constraintEnd_toStartOf="@+id/imageView15" android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView14" android:contentDescription="@string/img_partilha"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/txt_data_pub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" style="@style/txt_data"
            app:layout_constraintBottom_toTopOf="@+id/imageView14"
            app:layout_constraintStart_toEndOf="@+id/imageView2" android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/txt_valor_duracao_video"
            android:layout_width="@dimen/tamanho_50"
            android:layout_height="@dimen/tamanho_20"
            android:id="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="1.0"
            style="@style/txt_duracao_video" android:textAlignment="viewEnd"/>
    <ImageView
            android:layout_width="@dimen/tamanho_15"
            android:layout_height="@dimen/tamanho_15" app:srcCompat="@drawable/ic_play_arrow"
            android:id="@+id/imageView13"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/textView10" app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.02" android:layout_marginStart="4dp"
            android:contentDescription="@string/img_reproduzir_ic"/>
</android.support.constraint.ConstraintLayout>