<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragmentos.principalSemSessaoIniciada.IniciarSessaoFragment">


    <TextView
            android:text="@string/txt_entrar_criar_conta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/guideline" android:gravity="center" android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/guidelineEsquerda"
            app:layout_constraintEnd_toStartOf="@+id/guidelineDireita" android:textColor="#000000"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.05"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guidelineDireita"
                                                android:orientation="vertical" app:layout_constraintGuide_end="20dp"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guidelineEsquerda" app:layout_constraintGuide_begin="20dp"
                                                android:orientation="vertical"/>
    <TextView
            android:text="@string/txt_entrar_desfrutar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="@+id/guidelineEsquerda"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintEnd_toStartOf="@+id/guidelineDireita"
            android:textColor="#000000" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:text="@string/txt_entrar_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" app:layout_constraintStart_toStartOf="@+id/guidelineEsquerda"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:textStyle="bold" android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineDireita" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/txt_entrar_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnEntrar"
            style="@style/MyButtonStylePreto"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginTop="8dp"
            android:focusable="true"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCriarConta" android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            style="@style/MyButtonStyleBranco"
            android:background="@drawable/borda_preta"
            app:layout_constraintTop_toBottomOf="@+id/btnEntrar"
            app:layout_constraintStart_toStartOf="@+id/guidelineEsquerda"
            app:layout_constraintEnd_toStartOf="@+id/guidelineDireita" android:text="@string/txt_criar_conta"/>
    <TextView
            android:text="@string/txt_mais_formas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/btnCriarConta"
            app:layout_constraintStart_toStartOf="@+id/guidelineEsquerda"
            app:layout_constraintEnd_toStartOf="@+id/guidelineDireita"
            android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/txt_fscebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/borda_preta"
            style="@style/MyButtonStyleBranco"
            android:id="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/textView10" app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/txt_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button6"
            android:background="@drawable/borda_preta"
            style="@style/MyButtonStyleBranco"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button5"
            app:layout_constraintStart_toStartOf="@+id/guidelineEsquerda"
            app:layout_constraintEnd_toStartOf="@+id/guidelineDireita"
    />

</androidx.constraintlayout.widget.ConstraintLayout>