<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragmentos.principalSemSessaoIniciada.RegistarSeFragment">


    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText2"
            app:layout_constraintTop_toBottomOf="@+id/textView23" app:layout_constraintBottom_toTopOf="@+id/editText3"
            app:layout_constraintVertical_chainStyle="packed" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineEsquerda"
            app:layout_constraintEnd_toStartOf="@+id/guidelineDireita" android:hint="@string/txt_nome"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.5" tools:ignore="Autofill"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText3"
            tools:ignore="Autofill"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            app:layout_constraintBottom_toTopOf="@+id/editText5" app:layout_constraintStart_toStartOf="@+id/editText2"
            app:layout_constraintEnd_toEndOf="@+id/editText2" android:hint="@string/txt_email"
            app:layout_constraintHorizontal_bias="0.5" />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText5"
            tools:ignore="Autofill"
            app:layout_constraintTop_toBottomOf="@+id/editText3"
            app:layout_constraintBottom_toTopOf="@+id/editText6" app:layout_constraintStart_toStartOf="@+id/editText3"
            app:layout_constraintEnd_toEndOf="@+id/editText3" android:hint="@string/txt_senha"
            app:layout_constraintHorizontal_bias="0.5"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText6"
            tools:ignore="Autofill"
            app:layout_constraintTop_toBottomOf="@+id/editText5"
            app:layout_constraintStart_toStartOf="@+id/guidelineEsquerda"
            app:layout_constraintEnd_toEndOf="@+id/editText5" android:hint="@string/txt_rep_senha"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btnEntrar"
            app:layout_constraintHorizontal_bias="0.5"/>
    <ImageView
            app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guidelineEsquerda"
            android:contentDescription="@string/img_voltar_ic"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline3"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_begin="40dp"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guidelineEsquerda"
                                                app:layout_constraintGuide_begin="20dp"
                                                android:orientation="vertical"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guidelineDireita"
                                                android:orientation="vertical" app:layout_constraintGuide_end="20dp"/>
    <TextView
            android:text="@string/txt_criar_conta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView23" android:textStyle="bold"
            android:textColor="#000000" app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/guidelineDireita"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2" android:textAlignment="center"
            android:textSize="16sp"/>

    <Button
            android:text="@string/txt_entrar_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnEntrar"
            style="@style/MyButtonStylePreto"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@+id/editText6"
            app:layout_constraintBottom_toTopOf="@+id/textView36"
            app:layout_constraintStart_toStartOf="@+id/guidelineEsquerda"
            app:layout_constraintEnd_toStartOf="@+id/guidelineDireita"/>
    <TextView
            android:text="@string/txt_pol_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView36"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/btnEntrar"
            android:layout_marginTop="24dp" app:layout_constraintStart_toEndOf="@+id/textView38"
            app:layout_constraintHorizontal_bias="0.5"
            android:textSize="12sp" app:layout_constraintEnd_toEndOf="@+id/btnEntrar"
            android:textStyle="bold" android:textColor="#000000"/>
    <TextView
            android:text="@string/txt_pol_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView37"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView36"
            app:layout_constraintEnd_toStartOf="@+id/textView39" android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/textView36"
            app:layout_constraintStart_toStartOf="@+id/guidelineEsquerda" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_chainStyle="packed" android:layout_marginTop="4dp"/>
    <TextView
            android:text="@string/txt_pol_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView38"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintTop_toTopOf="@+id/textView36"
            app:layout_constraintStart_toStartOf="@+id/guidelineEsquerda"
            app:layout_constraintEnd_toStartOf="@+id/textView36"
            app:layout_constraintHorizontal_chainStyle="packed" android:textSize="12sp" android:textColor="#000000"/>
    <TextView
            android:text="@string/txt_pol_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView39"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView37" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView37" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/guidelineDireita" android:textSize="12sp"
            android:layout_marginStart="4dp" android:textColor="#000000" android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>