<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:text="@string/txt_categoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trading_categoria_tv"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            style="@style/txt_categoria"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/trading_titulo_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            android:text="@string/txt_noticia_2"
            android:textColor="#000000" android:textSize="18sp"
            style="@style/txt_noticia_titulo_sub"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline4"
                                          android:orientation="horizontal" app:layout_constraintGuide_end="712dp"
                                          app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                                          app:layout_constraintStart_toStartOf="parent"
                                          app:layout_constraintEnd_toEndOf="parent"
                                          app:layout_constraintGuide_begin="24dp"/>
    <TextView
            android:text="@string/txt_data_pub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trading_data_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/trading_titulo_tv" style="@style/txt_data"/>
    <ImageView
            android:layout_width="@dimen/tamanho_16"
            android:layout_height="@dimen/tamanho_20" app:srcCompat="@drawable/bloomberg_favoritos"
            android:id="@+id/imageView7" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/trading_titulo_tv"
            android:contentDescription="@string/img_favoritos" style="@style/icone_estilo_partilha_favorito"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="@dimen/tamanho_16"
            android:layout_height="@dimen/tamanho_20" app:srcCompat="@drawable/bloomberg_partilhar"
            android:id="@+id/imageView11"
            app:layout_constraintEnd_toStartOf="@+id/imageView7" android:layout_marginEnd="16dp"
            android:contentDescription="@string/img_partilha" style="@style/icone_estilo_partilha_favorito"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/trading_titulo_tv"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:srcCompat="@drawable/separador_pontos"
            android:id="@+id/imgSeparador"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView11" android:layout_marginTop="16dp"
            android:contentDescription="@string/txt_separador"/>
</android.support.constraint.ConstraintLayout>