<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragmentos.principalSessaoIniciada.MaisNoticiasFragment">
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/textView48"
            tools:listitem="@layout/item_mais_noticias" android:id="@+id/recyclerViewMaisNoticias"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline6" app:layout_constraintGuide_begin="30dp"
                                                android:orientation="horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            style="@style/TituloToolbarMaisNoticias"
            android:id="@+id/textView48"
            app:layout_constraintTop_toTopOf="@+id/guideline6"
            android:text="@string/txt_categoria_opniao"
            app:layout_constraintStart_toEndOf="@+id/frag_mais_btn_voltar"
            app:layout_constraintEnd_toStartOf="@+id/frag_mais_btn_pesquisar_mediap"/>
    <ImageView
            app:srcCompat="@drawable/ic_voltar_backpress_46dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/frag_mais_btn_voltar"
            android:contentDescription="@string/img_voltar_ic"
            app:layout_constraintTop_toTopOf="@+id/textView48"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView48"/>
    <ImageView
            app:srcCompat="@drawable/ic_search_black_40dp"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:contentDescription="@string/txt_hint_pesquisa"
            android:id="@+id/frag_mais_btn_pesquisar_mediap" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline6"
            app:layout_constraintBottom_toBottomOf="@+id/textView48" android:layout_marginEnd="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>